templates/krakend/svc-front-test-krakend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-test-krakend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000 
    protocol: TCP
    targetPort: 3000
  selector:
    app: front-test-krakend
  sessionAffinity: None
  type: ClusterIP
