templates/krakend/ingress-front-test-krakend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-test-krakend
spec:
  rules:
  - host: front-test-krakend.dev.numerique-interieur.com
    http:
      paths:
      - backend:
          service:
            name: front-test-krakend
            port:
              number: 3000 
        path: /
        pathType: ImplementationSpecific
